TagInputComponent: Changed tag stacking to wrap horizontally and fixed tag colors with requirements

--- a/client/src/app/components/sidebar/save-drawing-page/tag-input/tag-input.component.scss
+++ b/client/src/app/components/sidebar/save-drawing-page/tag-input/tag-input.component.scss
@@ -1,5 +1,5 @@
 div {
-    font-size: 12px;
+    font-size: 14px;
 }
 .Satisfied {
     color: green;
@@ -10,16 +10,33 @@ div {
     color: red;
 }
 
+.Unrequested {
+    color: black;
+}
+
+#inputDiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+#tagFormField {
+    padding-top: 15px;
+}
+
 .tagDiv {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: flex-start;
     align-content: space-between;
+    flex-wrap: wrap;
 }
 
 .tag {
     background: rgb(224, 224, 224);
     padding: 5px;
-    margin-bottom: 5px;
+    margin: 5px;
 }
 
 .tagLabel {
@@ -52,12 +69,11 @@ div {
 }
 
 #addTagButton {
-    border-radius: 3px;
-    margin-left: 5px;
-    text-align: center;
     font-size: large;
     background-color: coral;
     width: 150px;
+    align-self: center;
+    margin: 10px;
 }
 
 #addTagButton:hover {
